--- a/patch/Oxeye/.vscode/launch.json
+++ b/patch/Oxeye/.vscode/launch.json
@@ -10,7 +10,7 @@
         "-d",
         "${workspaceRoot}"
       ],
-      "executable": "${workspaceRoot}/build/PolyMidi.elf",
+      "executable": "${workspaceRoot}/build/Oxeye.elf",
       "interface": "swd",
       "name": "Cortex Debug",
       "openOCDLaunchCommands": [
